# Conway-s-Game-of-Life

./: CMakeLists.txt  README.md  main.cpp
include/events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/lifeSim/: LifeLogic.hpp
include/sdl/: Application.hpp  Field.hpp  LifeAdapter.hpp  SdlElement.hpp
src/: CMakeLists.txt
src/lifeSim/: CMakeLists.txt  LifeLogic.cpp
src/sdl/: Application.cpp  CMakeLists.txt  Field.cpp  LifeAdapter.cpp
